[metadata]
name = glare_tempest_tests
summary = Glare tests
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/IlyaMenkov/glare_tempest_tests

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    glare_tempest_plugin

[entry_points]
tempest.test_plugins =
    glare_tempest_tests = glare_tempest_plugin.plugin:GlareTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source